# starting-ragchatbot-codebase

./: .gitignore  CLAUDE.md  frontend-changes.md  pyproject.toml
.claude/: settings.local.json
.claude/commands/: implement-feature.md
backend/: ai_generator.py  app.py  rag_system.py  search_tools.py  vector_store.py
backend/tests/: conftest.py  helpers.py  test_ai_generator.py  test_api.py  test_rag_system.py  test_search_tools.py  test_vector_store.py
frontend/: .prettierrc  eslint.config.js  index.html  package.json  script.js  style.css
scripts/: check-frontend.sh  format-frontend.sh
